Updated with more loglevels

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,7 @@
   <button type="button" (click)="TestLog()">Console Log</button>
   <button type="button" (click)="ErrorLog()">Error Log</button>
   <button type="button" (click)="InfoLog()">Info Log</button>
+  <button type="button" (click)="FatalLog()">Fatal Log</button>
+  <button type="button" (click)="WarnLog()">Warn Log</button>
+  <button type="button" (click)="DebugLog()">Debug Log</button>
 </div>
