Added localStorage as a logging type

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,8 @@
   <button type="button" (click)="FatalLog()">Fatal Log</button>
   <button type="button" (click)="WarnLog()">Warn Log</button>
   <button type="button" (click)="DebugLog()">Debug Log</button>
+  <button type="button" (click)="ClearLog()">Clear Log</button>
+
+  <button type="button" (click)="LocalStorageLog()">LocalStorage Log</button>
+  <button type="button" (click)="DeleteLocalStorageLog()">Delete LocalStorage Log</button>
 </div>
