--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,8 @@
   <button type="button" (click)="ClearLog()">Clear Log</button>
 
   <button type="button" (click)="LocalStorageLog()">LocalStorage Log</button>
-  <button type="button" (click)="DeleteLocalStorageLog()">Delete LocalStorage Log</button>
+  <button type="button" (click)="DeleteLocalStorageLog()">Delete LocalStorage Logs</button>
+
+  <button type="button" (click)="ApiLogEntry()">Log to database</button>
+  <button type="button" (click)="ClearApiLogs()">Clear database logs</button>
 </div>
